syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// common
import "common/player-data.proto";
import "common/vector2.proto";
import "common/spell.proto";


message ProtectionWallIdRequest {
  common.PlayerData playerData = 1;
  int32 towerId = 2;
  int32 protectionWallId = 3;
};
